--- a/clock.css
+++ b/clock.css
@@ -21,6 +21,7 @@ body {
   height: 250px; 
   position: absolute;
   width: 250px;
+  margin-left: 39%;
 }
 
 .clock:before,
@@ -57,10 +58,11 @@ body {
 {
     color: #F24236;
     display: block;
-    text-align: center;
+    
      text-transform: uppercase;
-    font-size: 4.5em;
-    font-weight: 700;
+    font-size: 150px;
+    margin-top: 35%;
+    
     font-family: verdana;
     
     text-shadow: 1px 1px 1px #919191, 1px 2px 1px #919191,1px 3px 1px #919191,1px 4px 1px #919191,1px 5px 1px #919191,1px 6px 1px #919191,1px 7px 1px #919191,1px 8px 1px #919191,
@@ -69,14 +71,11 @@ body {
 }
 .Blazing {
 
-	margin: 0;
     font-family: 'Akronim';
-    color: rgba(33, 163, 33, 0.877);
-    font-size: 100px;
-	line-height: 50px;
-	min-width: 50px;
-	outline: none;
-	vertical-align: middle;
+    color: rgba(8, 102, 8, 0.877);
+    font-size: 80px;
+	line-height: 120px;
+	
     
 	text-shadow:
         0 3px 20px red,
@@ -120,3 +119,44 @@ body {
 		-2px -5px 5px yellow,
 		4px -10px 10px yellow; }
 }
+@media screen and (max-width : 950px)
+{
+    .clock{
+        margin-left: 32%;
+    }
+    .text{
+        font-size: 120px;
+        margin-top: 45% !important;
+    }
+}
+@media screen and (max-width : 850px)
+{
+    .clock{
+        margin-left: 32%;
+    }
+    .text{
+        font-size: 120px;
+        margin-top: 50% !important;
+    }
+}
+@media screen and (max-width : 750px)
+{
+    .clock{
+        margin-left: 28%;
+    }
+    .text{
+        font-size: 120px;
+        margin-top: 60% !important;
+    }
+}
+@media screen and (max-width : 650px)
+{
+    .clock{
+        margin-left: 25%;
+    }
+    .text{
+        font-size: 100px;
+        margin-top: 80% !important;
+    }
+}
+
